--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">GoldMineProject</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Личные счета</string>
+    <string name="action_settings">Настройки</string>
+    <string name="title_activity_group">Групповые счета</string>
+    <string name="title_activity_profile">Профили</string>
 </resources>
