--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_profile">Профили</string>
     <string name="title_activity_personal">Личные счета</string>
     <string name="label_empty_list">Список пуст</string>
+    <string name="total">Total</string>
 </resources>
