--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="default_notification_channel_id">default</string>
     <string name="app_name">Счетовод</string>
     <string name="action_settings">Настройки</string>
     <string name="title_activity_group">Групповые счета</string>
@@ -8,6 +9,16 @@
     <string name="title_activity_personal">Личные счета</string>
     <string name="label_empty_list">Список пуст</string>
     <string name="total">Total</string>
+    <string name="ok">OK</string>
+    <string name="tip_title">Совет дня</string>
+    <string name="tip_1">Couchsurfing: отличный способ сэкономить на ночлеге и познакомиться с местными.</string>
+    <string name="tip_2">Местную кухню можно найти не только в дорогих ресторанах, но и в обычных супермаркетах.</string>
+    <string name="tip_3">Blablacar: ваша поездка будет не только дешёвой, но и увлекательной.</string>
+    <string name="tip_4">Ищите обменники в стороне от туристических маршрутов - курс обмена вас порадует.</string>
+    <string name="tip_5">Берите с собой термос и бутерброды, чтобы насладиться обедом в любом месте и в любое время.</string>
+    <string name="tip_6">В путешествие берите только самое необходимое. Авиабилеты без багажа намного дешевле.</string>
+    <string name="tip_7">Старайтесь быть в курсе акций и специальных предложений. Иногда в самые дорогие места можно попасть совершенно бесплатно.</string>
+    <string name="tip_8">По возможности пользуйтесь общественным транспортом: не так страшен чёрт, как его малюют.</string>
     <string name="title_acc">Профиль</string>
     <string name="title_groups">Группы</string>
 
@@ -19,5 +30,3 @@
     </string-array>
 
 </resources>
-
-
